# canvord

./: .dockerignore  .gitignore  Cargo.toml  README.md  compose.yaml  docker-compose.yml  nginx.conf
canvord_backend/: .env  Cargo.toml  Dockerfile
canvord_backend/api/: Cargo.toml
canvord_backend/api/src/: admin_controller.rs  api_info.rs  app_state.rs  article_controller.rs  lib.rs  util.rs  visitor_controller.rs
canvord_backend/command/: Cargo.toml
canvord_backend/command/src/: create_article_command.rs  delete_article_command.rs  hide_article_command.rs  lib.rs  publish_article_command.rs  publish_draft_command.rs  save_article_command.rs  update_article_command.rs
canvord_backend/dto/: Cargo.toml
canvord_backend/dto/src/: app_error.rs  app_response.rs  article.rs  lib.rs  pagination.rs
canvord_backend/entity/: Cargo.toml
canvord_backend/entity/src/: article.rs
canvord_backend/handler/: Cargo.toml
canvord_backend/handler/src/: create_article_handler.rs  delete_article_handler.rs  find_article_by_id_handler.rs  find_article_by_slug_handler.rs  find_publish_article_by_slug_handler.rs  hide_article_handler.rs  lib.rs  list_article_by_title_handler.rs  list_articles_in_page_by_status_handler.rs  list_publish_article_by_title_handler.rs  publish_article_handler.rs  publish_draft_handler.rs  save_article_handler.rs  update_article_handler.rs
canvord_backend/middleware/: Cargo.toml
canvord_backend/middleware/src/: cache.rs
canvord_backend/migration/: Cargo.toml
canvord_backend/migration/src/: m20220101_000001_create_table.rs
canvord_backend/service/: Cargo.toml
canvord_backend/service/src/: article_mutation.rs  article_query.rs  lib.rs
canvord_backend/src/: main.rs
canvord_client/: Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
canvord_client/src/: app.rs  main.rs
canvord_client/src/api/: mod.rs
canvord_client/src/model/: mod.rs
canvord_client/src/route/: mod.rs
canvord_client/src/view/: article_view.rs  home_view.rs  mod.rs  not_found_view.rs
canvord_frontend/: Cargo.toml  Dockerfile  index.html  package-lock.json  tailwind.config.js
canvord_frontend/src/: app.rs  main.rs
canvord_frontend/src/api/: auth.rs  mod.rs
canvord_frontend/src/component/: article_card.rs  button.rs  confirm_dialog.rs  editor.rs  loading_spinner.rs  login.rs  mod.rs  pagination.rs  sidebar.rs  spinner.rs  text_input.rs
canvord_frontend/src/layout/: layout.rs  mod.rs  sidebar.rs
canvord_frontend/src/model/: mod.rs
canvord_frontend/src/route/: mod.rs
canvord_frontend/src/utils/: mod.rs  preview_html.rs  show_browser_notification.rs
canvord_frontend/src/view/: article_view.rs  draft_view.rs  edit_view.rs  home_view.rs  mod.rs  not_found_view.rs
dapr/components/: canvord-secrets.json  canvord-secretstore.yaml
dapr/configuration/: canvord-configuration.yaml
src/contrib/text_item_api/: Cargo.toml  Dockerfile
src/contrib/text_item_api/commands/: Cargo.toml
src/contrib/text_item_api/commands/src/: lib.rs
src/contrib/text_item_api/entity/: Cargo.toml
src/contrib/text_item_api/entity/src/: lib.rs  prelude.rs  text_item.rs
src/contrib/text_item_api/migration/: Cargo.toml
src/contrib/text_item_api/migration/src/: m20220101_000001_create_table.rs
src/contrib/text_item_api/services/: Cargo.toml
src/contrib/text_item_api/services/src/: lib.rs  text_item_storage.rs
src/contrib/text_item_api/src/: main.rs  main_functions.rs
src/contrib/text_item_api/src/commands/: create_text_item_command.rs  item_handlers.rs  mod.rs
src/contrib/text_item_api/src/services/: database_connection_provider.rs  mod.rs  text_item_storage.rs
