[package]
name = "canvord_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.88"
compose-macro = "0.1.0"
dapr = "0.16.2"
sea-orm-migration = "1.1.11"
serde = { version = "1.0.219", features = ["derive"] }

migration = { path = "migration" }
tonic = "0.12.3"
tokio = "1.45.0"

[dependencies.sea-orm]
version = "1.1.11"
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql"
]
