[package]
name = "canvord-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
sycamore = { version = "0.9.1", features = ["serde", "suspense"] }
sycamore-router = "0.9.1"
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
monaco = "0.5"
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
gloo-timers = "0.3.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Element",
    "Storage",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlDocument",
    "Document",
    "Notification",
    "NotificationOptions",
    "HtmlInputElement"
]}
gloo-storage = "0.3.0"
gloo-console = "0.3.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
