[package]
name = "canvord-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-service = "2.0.3"
actix-rt = "2.10.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
apistos = { version = "0.6.0", features = ["extras", "qs_query", "swagger-ui"] }
schemars = { package = "apistos-schemars", version = "0.8.22", features = ["chrono", "uuid1", "url", "rust_decimal"] }
canvord-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }