[package]
name = "canvord-api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
actix-cors = "0.7"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
apistos = { version = "0.6.0", features = ["extras", "qs_query", "swagger-ui"] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
validator = { version = "0.20.0", features = ["derive"] }
entity = { path = "../entity" }
dto = { path = "../dto" }
middleware = { path = "../middleware" }
migration = { path = "../migration" }
command = { path = "../command" }
handler = { path = "../handler" }
sea-orm = "1.1.12"
futures-util = "0.3.31"
jsonwebtoken = "9"
chrono = "0.4"
once_cell = "1.21.3"
redis = { version = "0.32.4" , features = ["tokio-comp"] }
env_logger = "0.11.8"