[package]
name = "text_item_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "commands", "entity", "migration", "services"]

[dependencies]
services = {path = "services"}
futures = "0.3.1"
actix-web = "4.11.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.5.0"
