[package]
name = "text_item_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.88"
compose-macro = "0.1.0"
more-di = "3.1.0"
sea-orm-migration = "1.1.11"
serde = { version = "1.0.219", features = ["derive"] }

migration = { path = "migration" }

[dependencies.sea-orm]
version = "1.1.11"
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql"
]
